--- a/theme-v3.css
+++ b/theme-v3.css
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
 }
 
+.card h2{
+	color: #000000
+}
+
 h1 {
     font-size: 2.5em;
     color: #FF7F50; /* لون الترويسة الرئيسي */
