--- a/theme-v3.css
+++ b/theme-v3.css
@@ -24,9 +24,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
 }
 
-.card h2{
-	color: #000000
-}
 
 h1 {
     font-size: 2.5em;
@@ -126,7 +123,7 @@ header p {
 }
 
 .card h2 {
-    color: #FF7F50;
+    color: #FF000000;
     font-size: 1.5em;
     margin-bottom: 10px;
 }
